Bug 5530 - Linux/ia64 linker is broken
Summary: Linux/ia64 linker is broken
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: ld (show other bugs)
Version: 2.19
: P2 critical
Target Milestone: ---
Assignee: unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-12-31 19:01 UTC by H.J. Lu
Modified: 2007-12-31 19:26 UTC (History)
2 users (show)

See Also:
Host:
Target: ia64-unknown-linux-gnu
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2007-12-31 19:01:40 UTC
I think this patch

http://sourceware.org/ml/binutils/2007-12/msg00171.html

breaks Linux/ia64 linker:

tmpdir/tlspic1.o:(.IA_64.unwind+0x0): warning: unsupported reloc
tmpdir/tlspic1.o:(.IA_64.unwind+0x8): warning: unsupported reloc
tmpdir/tlspic1.o:(.IA_64.unwind+0x10): warning: unsupported reloc
/export/build/gnu/binutils-cross/build-ia64-linux/ld/ld-new: final link failed:
Nonrepresentable section on output
FAIL: TLS -fpic -shared

It is reproducible with a cross linker.